#35 - Better exception handling when vocabulary data is not present in elasticsearch, improved code coverage